packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-15/fixed-dep.js
function foo(args) {
  args = args || {};
  const opt = args.v || args.value;
}

module.exports = foo;
